Added Week 1 Challenge

--- a/unit1_projects/dbc1.html
+++ b/unit1_projects/dbc1.html
@@ -8,7 +8,7 @@
 <body>
 	<h1>Hello!</h1>
 	<h2>My name is Kim Brewer</h2>
-	<p><img src="images/me.JPG" id="me" /></p>
+	<p><img src="images/me.jpg" id="me" /></p>
 	<h3>A bit about me</h3>
 	<p>I am from Arizona but have lived all over the world.  In the past two years I have lived in the <strong>UK, Grenada (Caribbean), Oakland, Redlands, Syracuse, and now NYC</strong>!<br/>  I am a huge foodie and love doing yoga as much as I can.  I can't wait to learn a ton and meet some great people at DBC! 
 	<h4>My Skillz</h4>
