--- a/index.html
+++ b/index.html
@@ -1,1 +1,7 @@
-<html><body>Hello DBC!</body></html>
+<html>
+<body>
+
+<h2>Hello DBC!</h2>
+<p><a href="/unit1_projects/week1_technical_blog.html">Check out my technical blog</a> </p>
+</body>
+</html>
