Added cultural blog link

--- a/index.html
+++ b/index.html
@@ -3,5 +3,6 @@
 
 <h2>Hello DBC!</h2>
 <p><a href="/unit1_projects/week1_technical_blog.html">Check out my technical blog</a> </p>
+<p><a href="/unit1_projects/week3_cultural_blog.html">Check out my cultural blog</a> </p>
 </body>
 </html>
