--- a/index.html
+++ b/index.html
@@ -25,6 +25,7 @@
 				<ul>
 					<li><a href="/unit1_projects/week1_technical_blog.html">Week 1</a></li>
 					<li><a href="/unit1_projects/week2_technical.html">Week 2</a></li>
+					<li><a href="/unit1_projects/week3_technical.html">Week 3</a></li>
 				</ul>
 			</div>
 			<div class="block image">
@@ -39,6 +40,7 @@
 				<h2>Cultural Blog Posts</h2>
 				<ul>
 					<li><a href="/unit1_projects/week1_cultural_blog.html">Week 1</a></li>
+					<li><a href="/unit1_projects/week1_cultural.html">Week 3</a></li>
 				</ul>
 			</div>
 		</div>
