--- a/index.html
+++ b/index.html
@@ -42,6 +42,7 @@
 				<ul>
 					<li><a href="/blog-posts/week1_cultural_blog.html">Week 1</a></li>
 					<li><a href="/blog-posts/week3_cultural.html">Week 3</a></li>
+					<li><a href="/blog-posts/week4_cultural.html">Week 3</a></li>
 				</ul>
 			</div>
 		</div>
