--- a/index.html
+++ b/index.html
@@ -27,6 +27,7 @@
 					<li><a href="/blog-posts/week2_technical.html">Week 2</a></li>
 					<li><a href="/blog-posts/week3_technical.html">Week 3</a></li>
 					<li><a href="/blog-posts/week4_technical.html">Week 4</a></li>
+					<li><a href="/blog-posts/week5_technical.html">Week 5</a></li>
 				</ul>
 			</div>
 			<div class="block image">
@@ -43,6 +44,7 @@
 					<li><a href="/blog-posts/week1_cultural_blog.html">Week 1</a></li>
 					<li><a href="/blog-posts/week3_cultural.html">Week 3</a></li>
 					<li><a href="/blog-posts/week4_cultural.html">Week 4</a></li>
+					<li><a href="/blog-posts/week5_cultural.html">Week 5</a></li>
 				</ul>
 			</div>
 		</div>
