--- a/index.html
+++ b/index.html
@@ -28,6 +28,7 @@
 					<li><a href="/blog-posts/week3_technical.html">Week 3</a></li>
 					<li><a href="/blog-posts/week4_technical.html">Week 4</a></li>
 					<li><a href="/blog-posts/week5_technical.html">Week 5</a></li>
+					<li><a href="/blog-posts/week6_technical.html">Week 6</a></li>
 				</ul>
 			</div>
 			<div class="block image">
@@ -45,6 +46,7 @@
 					<li><a href="/blog-posts/week3_cultural.html">Week 3</a></li>
 					<li><a href="/blog-posts/week4_cultural.html">Week 4</a></li>
 					<li><a href="/blog-posts/week5_cultural.html">Week 5</a></li>
+					<li><a href="/blog-posts/week6_cultural.html">Week 6</a></li>
 				</ul>
 			</div>
 		</div>
