--- a/index.html
+++ b/index.html
@@ -47,6 +47,7 @@
 					<li><a href="/blog-posts/week3_cultural.html">Week 3</a></li>
 					<li><a href="/blog-posts/week4_cultural.html">Week 4</a></li>
 					<li><a href="/blog-posts/week5_cultural.html">Week 5</a></li>
+					<li><a href="/blog-posts/week6_cultural.html">Week 6</a></li>
 					<li><a href="/blog-posts/week7_cultural.html">Week 7</a></li>
 				</ul>
 			</div>
