--- a/blog-posts/week7_cultural.html
+++ b/blog-posts/week7_cultural.html
@@ -18,7 +18,7 @@
 	<div id="main">
 		<article>
 			<header>
-				<h1>Affirmation Stereotype Threat</h1>
+				<h1>Values</h1>
 				<div class="date">June 27th, 2014</div>
 			</header>
 			<div class="content">
