--- a/index.html
+++ b/index.html
@@ -30,6 +30,7 @@
 					<li><a href="/blog-posts/week5_technical.html">Week 5</a></li>
 					<li><a href="/blog-posts/week6_technical.html">Week 6</a></li>
 					<li><a href="/blog-posts/week7_technical.html">Week 7</a></li>
+					<li><a href="/blog-posts/week8_technical.html">Week 8</a></li>
 				</ul>
 			</div>
 			<div class="block image">
@@ -49,6 +50,7 @@
 					<li><a href="/blog-posts/week5_cultural.html">Week 5</a></li>
 					<li><a href="/blog-posts/week6_cultural.html">Week 6</a></li>
 					<li><a href="/blog-posts/week7_cultural.html">Week 7</a></li>
+					<li><a href="/blog-posts/week8_cultural.html">Week 8</a></li>
 				</ul>
 			</div>
 		</div>
