--- a/index.html
+++ b/index.html
@@ -63,6 +63,7 @@
 					<li><a href="/unit1_projects/wireframe_sites.html">Wireframing</a></li>
 					<li><a href="/unit1_projects/gps1.1.html">GPS 1.1</a></li>
 					<li><a href="/unit1_projects/my_wireframe.html">Index Page Wireframe Plan</a></li>
+					<li><a href="/unit3_cheatsheet.html">Looping in JS and Ruby reference</a></li>
 				</ul>
 			</div>
 			<div class="block image">
